--- a/index.html
+++ b/index.html
@@ -17,28 +17,32 @@
   </head>
 
   <body>
-    <header>NINJA BEES</header>
-    <!--
     <section class="container start">
       <div class="start-screen row">
         <button type="button" class="btn-start btn btn-dark">START</button>
       </div>
+    </section>
+    <div id="ruche"></div>
+    <div id="TitlePage"></div>
+    <div id="automat-Bees"></div>
 
+    <canvas class="ninja-bees none" width="1280" height="800"> </canvas>
+
+    <!--
      <div class="GameOver-screen row">
         <button type="button" class="btn btn-danger">PLAY AGAIN</button>
       </div>
-    </section>
 
 
+      <div class="Win-screen row">
+        <button type="button" class="btn btn-danger">PLAY AGAIN</button>
+      </div>
 
 
-    <div id="ruche"></div>
-    <div id="TitlePage"></div>
+   
 
-    <div id="automat-Bees"></div>
+
 -->
-
-    <canvas class="ninja-bees" width="1200" height="550"></canvas>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
