pb de loop résolu + add life score

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
     </section>
-    <div id="ruche2" class="col-2"></div>
+    <!-- <div id="ruche2" class="col-2"></div> -->
     <div id="automat-Bees"></div>
     <div id="automat-Bees1"></div>
     <div id="automat-Bees3"></div>
